@@ -48,7 +48,7 @@ else (BUILD_EXTRA_PLUGINS)
     set (CMAKE_REQUIRED_FLAGS "-fvisibility=hidden")
     check_cxx_compiler_flag (${CMAKE_REQUIRED_FLAGS} HAVE_VISIBILITY)
     if (HAVE_VISIBILITY)
-        set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_REQUIRED_FLAGS}")
+        set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_REQUIRED_FLAGS} -DHAVE_VISIBILITY")
     endif ()
     unset(CMAKE_REQUIRED_FLAGS)
 
