@@ -1,65 +1,65 @@
 
 cdlibdir = $(pkglibdir)/codecs
 
-cdlib_LTLIBRARIES = libeapol.la
-libeapol_la_CXXFLAGS = $(AM_CXXFLAGS)
-libeapol_la_LDFLAGS = -export-dynamic -shared
-libeapol_la_SOURCES = cd_eapol.cc
+cdlib_LTLIBRARIES = libcd_eapol.la
+libcd_eapol_la_CXXFLAGS = $(AM_CXXFLAGS)
+libcd_eapol_la_LDFLAGS = -export-dynamic -shared
+libcd_eapol_la_SOURCES = cd_eapol.cc
 
-cdlib_LTLIBRARIES += libi4l_rawip.la
-libi4l_rawip_la_CXXFLAGS = $(AM_CXXFLAGS)
-libi4l_rawip_la_LDFLAGS = -export-dynamic -shared
-libi4l_rawip_la_SOURCES = cd_i4l_rawip.cc
+cdlib_LTLIBRARIES += libcd_i4l_rawip.la
+libcd_i4l_rawip_la_CXXFLAGS = $(AM_CXXFLAGS)
+libcd_i4l_rawip_la_LDFLAGS = -export-dynamic -shared
+libcd_i4l_rawip_la_SOURCES = cd_i4l_rawip.cc
 
-cdlib_LTLIBRARIES += liblinux_sll.la
-liblinux_sll_la_CXXFLAGS = $(AM_CXXFLAGS)
-liblinux_sll_la_LDFLAGS = -export-dynamic -shared
-liblinux_sll_la_SOURCES = cd_linux_sll.cc
+cdlib_LTLIBRARIES += libcd_linux_sll.la
+libcd_linux_sll_la_CXXFLAGS = $(AM_CXXFLAGS)
+libcd_linux_sll_la_LDFLAGS = -export-dynamic -shared
+libcd_linux_sll_la_SOURCES = cd_linux_sll.cc
 
-cdlib_LTLIBRARIES += libnull.la
-libnull_la_CXXFLAGS = $(AM_CXXFLAGS)
-libnull_la_LDFLAGS = -export-dynamic -shared
-libnull_la_SOURCES = cd_null.cc
+cdlib_LTLIBRARIES += libcd_null.la
+libcd_null_la_CXXFLAGS = $(AM_CXXFLAGS)
+libcd_null_la_LDFLAGS = -export-dynamic -shared
+libcd_null_la_SOURCES = cd_null.cc
 
-cdlib_LTLIBRARIES += libpflog.la
-libpflog_la_CXXFLAGS = $(AM_CXXFLAGS)
-libpflog_la_LDFLAGS = -export-dynamic -shared
-libpflog_la_SOURCES = cd_pflog.cc
+cdlib_LTLIBRARIES += libcd_pflog.la
+libcd_pflog_la_CXXFLAGS = $(AM_CXXFLAGS)
+libcd_pflog_la_LDFLAGS = -export-dynamic -shared
+libcd_pflog_la_SOURCES = cd_pflog.cc
 
-cdlib_LTLIBRARIES += libpim.la
-libpim_la_CXXFLAGS = $(AM_CXXFLAGS)
-libpim_la_LDFLAGS = -export-dynamic -shared
-libpim_la_SOURCES = cd_pim.cc
+cdlib_LTLIBRARIES += libcd_pim.la
+libcd_pim_la_CXXFLAGS = $(AM_CXXFLAGS)
+libcd_pim_la_LDFLAGS = -export-dynamic -shared
+libcd_pim_la_SOURCES = cd_pim.cc
 
-cdlib_LTLIBRARIES += libppp.la
-libppp_la_CXXFLAGS = $(AM_CXXFLAGS)
-libppp_la_LDFLAGS = -export-dynamic -shared
-libppp_la_SOURCES = cd_ppp.cc
+cdlib_LTLIBRARIES += libcd_ppp.la
+libcd_ppp_la_CXXFLAGS = $(AM_CXXFLAGS)
+libcd_ppp_la_LDFLAGS = -export-dynamic -shared
+libcd_ppp_la_SOURCES = cd_ppp.cc
 
-cdlib_LTLIBRARIES += libraw4.la
-libraw4_la_CXXFLAGS = $(AM_CXXFLAGS)
-libraw4_la_LDFLAGS = -export-dynamic -shared
-libraw4_la_SOURCES = cd_raw4.cc
+cdlib_LTLIBRARIES += libcd_raw4.la
+libcd_raw4_la_CXXFLAGS = $(AM_CXXFLAGS)
+libcd_raw4_la_LDFLAGS = -export-dynamic -shared
+libcd_raw4_la_SOURCES = cd_raw4.cc
 
-cdlib_LTLIBRARIES += libraw6.la
-libraw6_la_CXXFLAGS = $(AM_CXXFLAGS)
-libraw6_la_LDFLAGS = -export-dynamic -shared
-libraw6_la_SOURCES = cd_raw6.cc
+cdlib_LTLIBRARIES += libcd_raw6.la
+libcd_raw6_la_CXXFLAGS = $(AM_CXXFLAGS)
+libcd_raw6_la_LDFLAGS = -export-dynamic -shared
+libcd_raw6_la_SOURCES = cd_raw6.cc
 
-cdlib_LTLIBRARIES += libslip.la
-libslip_la_CXXFLAGS = $(AM_CXXFLAGS)
-libslip_la_LDFLAGS = -export-dynamic -shared
-libslip_la_SOURCES = cd_slip.cc
+cdlib_LTLIBRARIES += libcd_slip.la
+libcd_slip_la_CXXFLAGS = $(AM_CXXFLAGS)
+libcd_slip_la_LDFLAGS = -export-dynamic -shared
+libcd_slip_la_SOURCES = cd_slip.cc
 
-cdlib_LTLIBRARIES += libtoken_ring.la
-libtoken_ring_la_CXXFLAGS = $(AM_CXXFLAGS)
-libtoken_ring_la_LDFLAGS = -export-dynamic -shared
-libtoken_ring_la_SOURCES = cd_token_ring.cc
+cdlib_LTLIBRARIES += libcd_token_ring.la
+libcd_token_ring_la_CXXFLAGS = $(AM_CXXFLAGS)
+libcd_token_ring_la_LDFLAGS = -export-dynamic -shared
+libcd_token_ring_la_SOURCES = cd_token_ring.cc
 
-cdlib_LTLIBRARIES += libwlan.la
-libwlan_la_CXXFLAGS = $(AM_CXXFLAGS)
-libwlan_la_LDFLAGS = -export-dynamic -shared
-libwlan_la_SOURCES = cd_wlan.cc
+cdlib_LTLIBRARIES += libcd_wlan.la
+libcd_wlan_la_CXXFLAGS = $(AM_CXXFLAGS)
+libcd_wlan_la_LDFLAGS = -export-dynamic -shared
+libcd_wlan_la_SOURCES = cd_wlan.cc
 
 AM_CXXFLAGS = @AM_CXXFLAGS@
 
