@@ -8,8 +8,9 @@ file_mime_paf.h file_mime_paf.cc \
 file_mime_process.h file_mime_process.cc \
 file_mime_config.cc file_mime_config.h \
 decode_base.cc decode_base.h \
-decode_b64.cc decode_b4.h \
+decode_b64.cc decode_b64.h \
 decode_bit.cc decode_bit.h \
 decode_qp.cc decode_qp.h \
 decode_uu.cc decode_uu.h \
 decode_buffer.cc decode_buffer.h
+
