@@ -76,7 +76,6 @@ private:
     MailLogState* log_state = NULL;
 
     // SMTP, IMAP, POP might have different implementation for this
-    void* config = NULL;
     virtual int handle_header_line(const uint8_t*, const uint8_t*, int) { return 0; }
     virtual int normalize_data(const uint8_t* , const uint8_t* ) { return 0; }
     virtual void decode_alert() {}
