@@ -42,6 +42,5 @@ libnhttp_inspect_la_LDFLAGS = -export-dynamic -shared
 libnhttp_inspect_la_SOURCES = $(file_list)
 endif
 
-EXTRA_DIST = nhttp_test_msgs.txt
-
 AM_CXXFLAGS = @AM_CXXFLAGS@
+
