@@ -12,4 +12,6 @@ tcp_state_machine.cc \
 tcp_state_machine.h \
 tcp_segment_descriptor.cc \
 tcp_segment_descriptor.h \
-stream_tcp_unit_test.cc
+stream_tcp_unit_test.cc \
+stream_tcp_unit_test.h
+
